--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ repositories {
 }
 
 sourceSets {
+    main {
+        groovy {
+            srcDirs = ['src']
+        }
+    }
+
     test {
         groovy {
             srcDirs = ['test']
